# FastApi3

./: .gitignore  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_17_0155-083c1d5ab3ad_.py  2024_09_02_1532-0c1aa2ba12e0_create_user_table.py  2024_09_02_1753-242339f01616_create_accesstoken_table.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/auth/: config.py  dependencies.py  models.py  router.py  schemas.py  service.py
