[tool.poetry]
name = "fastapi-suren2"
version = "0.1.0"
description = ""
authors = ["ilyamak04 <makilya04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
